assets/main-404.css
.bb-template-404 {
    /* background-color: rgba(var(--color-button)); */
    display: block;
    /*padding: 10rem 5rem;*/
    max-width: none;
    margin: 2rem 2rem;
    position: relative;
    border-radius: 5px;
  }

  .bb-upper-template-404 {
    /*background-color: rgba(var(--color-button));*/
    border-radius: 5px;
    /* margin: 7rem auto; */
    margin: auto;
    display: block;
    padding: 2rem;
    position: relative;
    max-width: var(--page-width);
  }

  .bb-404-uper-banner {
    /*padding: 7rem 0rem;*/
  }
  .vertical-bar-top-404 {
    top: -1.5rem;
    left: 3rem;
    display: flex;
    flex-direction: row;
    position: absolute;
    gap: 52.5px;
    z-index: 1;
  }

  .vertical-bar-bottom-404 {
    bottom: -1.5rem;
    left: 3rem;
    display: flex;
    flex-direction: row;
    position: absolute;
    gap: 52.5px;
    z-index: 1;
  }

  .vertical-bar-left-404 {
    left: -1.5rem;
    top: 3rem;
    display: flex;
    flex-direction: column;
    position: absolute;
    gap: 50px;
    z-index: 1;
  }

  .vertical-bar-right-404 {
    right: -1.5rem;
    top: 3rem;
    display: flex;
    flex-direction: column;
    position: absolute;
    gap: 50px;
    z-index: 1;
  }

  .bb-404-h-button {
    font-size: 1.5rem;
    color: var(--secondary_button_label);
    text-transform: uppercase;
    padding: 10px 20px;
    border-radius: 10px;
    background: var(--button_label);
    box-shadow: 3px 3px #000;
    cursor: pointer;
    margin: 35px 0;
  }

  .bb-404-h-button:hover {
    color: var(--secondary_button_label);
  }

  .bb-404-h2-button {
    font-size: 1.5rem;
    color: var(--product_price_font);
    text-transform: uppercase;
    padding: 10px 20px;
    border-radius: 10px;
    background: var(--secondary_product_button_color);
    box-shadow: 3px 3px #000;
    cursor: pointer;
    margin: 35px 0;
  }

  .bb-404-h2-button:hover {
    color: var(--product_price_font);
  }

  .vertical-bar-circle-404 {
    width: 30px;
    background-color: rgb(var(--color-background));
    height: 32px;
    border-radius: 50%;
    display: block !important;
  }

  .vertical-bar-circle-h-404 {
    width: 32.75px;
    height: 30px;
    background-color: rgb(var(--color-background));
    border-radius: 50%;
    display: block !important;
  }

  .bb-404-subtext {
    font-weight: 600;
    font-size: 96px;
    line-height: 34px;
    padding-bottom: 30px;
  }

  .bb-404-title {
    font-weight: 700;
    font-size: 48px;
    line-height: 34px;
    padding-bottom: 30px;
  }

  .bb-404-sub-title {
    font-weight: 500;
    font-size: 28px;
    line-height: 24px;
  }

  .bb-404-para {
    font-weight: 400;
    font-size: 24px;
    line-height: 36px;
    margin-bottom: 25px;
  }
  /* .bb-404-h-button:hover {
              color: black;
          background: #e5e5ea;
          border: none;
      } */

  /* .bb-404-h-button:hover {
              color: black;
          background: #e5e5ea;
          border: none;
          box-shadow: none;
      } */

  /* .bb-404-c-button:hover {
              background-color: black;
          color: #e5e5ea;

          border: none;
      } */
  .bb-404-c-button {
    margin-top: 2rem;
    font-size: 2rem;
  }

  .bb-404-c-button {
    text-decoration: underline;
    background-color: transparent;
  }

  /* .button:not([disabled]):hover:after {
          box-shadow: none;
      } */
  .desktop-view {
    display: block;
  }

  .mobile-view {
    display: none;
  }

  @media screen and (max-width: 749px) {
    .mobile-view {
      display: block;
    }
    .bb-404-c-button {
      background: rgba(var(--color-button));
    }
    .desktop-view {
      display: none !important;
    }

    .bb-upper-template-404 {
      /*  background-color: rgba(var(--color-button)); */
      border-radius: 0px;
      display: block;
      position: relative;
      margin: 0rem;
      padding: 0rem;
      margin: auto;
      border-radius: 2px;
    }
    .bb-template-404 {
      background-color: unset;
      /* padding: 10rem 0rem 1rem 0rem; */
    }

    .bb-404-subtext {
      font-weight: 500;
      font-size: 32px;
      line-height: 34px;
      padding-bottom: 0px;
    }

    .bb-404-title {
      font-weight: 500;
      font-size: 28px;
      line-height: 34px;
      padding-bottom: 0px;
    }

    .bb-404-para {
      font-weight: 400;
      font-size: 12px;
      line-height: 21px;
      margin-bottom: 2rem;
    }

    .vertical-bar-circle-404 {
      width: 13px;
      height: 13px;
    }
    .vertical-bar-top-404 {
      top: -0.5rem;
      left: 1.5rem;
      gap: 20px;
    }

    .vertical-bar-bottom-404 {
      bottom: -0.5rem;
      left: 1.5rem;
      gap: 20px;
    }
    .bb-404-uper-banner {
      padding: 1rem 0rem;
    }
    .bb-404-c-button {
      margin-top: 2rem;
      font-size: 1.5rem;
    }
    .bb-404-h-button {
      padding: 10px 20px;
      font-size: 1rem;
      margin: 10px 0;
    }

    .bb-404-h2-button {
      padding: 10px 20px;
      font-size: 1rem;
      margin: 10px 0;
    }

    .bb-404-sub-title {
      font-weight: 500;
      font-size: 18px;
      line-height: 14px;
    }
  }

  .button:not([disabled]):hover:after {
    box-shadow: none !important;
  }

